refactored post service class